[css-grid] Fix behavior of positioned items without specific dimensions

Currently positioned items that doesn't have specific dimensions
are not properly sized. This patch fixes the issues with them.

The patch removes the ExtraInline|BlockOffsets from LayoutBox,
so now LayouGrid is responsible to setting the location of the positioned item.
This will be useful to add alignment support for positioned items later.
It also removes grid specific logic from LayoutBox.

LayoutBox::ComputeInlineStaticDistance() was modified
as it got confused because the container of the positioned grid items
is not the grid container, but the grid area. That caused wrong values
when resolving "auto" in both left and right offset properties.

Note that after this patch we match Firefox behavior on these cases.

BUG=618996
TEST=fast/css-grid-layout/positioned-grid-items-sizing.html
TEST=external/wpt/css/css-grid-1/abspos/

Review-Url: https://codereview.chromium.org/2665133003
Cr-Commit-Position: refs/heads/master@{#470063}

Former-commit-id: e48a88ace117744e50c9f9769b40b9d702f286bf